2001-02-10  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* browser.cc, soundtest.cc: you can now take screenshots in the shape browser and sound tester

2001-02-10  Christoph Reichenbach  <jameson@linuxgames.com>
	* alpha_kludges.h: Added clog to the std:: namespace
	* usecode/compiler/ucsym.cc: Explicitly specified String_compare in
	  template; fixes cxx (also in my version of 0.91Alpha2)

2001-02-09  Max Horn  <max@quendi.de>
	* keys.cc: fixed bug in KeyBinder::ParseText on MacOS; changed some cerr to clog

2001-02-09  Max Horn  <max@quendi.de>
	* shapes/ vgafile.cc: fixed bad bug, shape_source was never inited
	   to 0, this could cause bad crashs in the destructor if load was
	   never called
	* gamewin.cc: fixed delete -> delete[] in Game_window destructor
	* shapes/font.cc: fixed delete -> delete[] in Font destructor

2001-02-09  Tristan Tarrant  <nadir@users.sourceforge.net>
	* keys.cc: Endgame is for SI as well

2001-02-08  Jeff Freedman  <jeff@amy.nerble.net>

	* Release 0.91Alpha2!
	* Commented out 'ucxt' in usecode/Makefile.am, since it was
	getting compile errors.
	* Commented out memory fix in path.cc, until we figure out why it
	causes hangs.

2001-02-08  Max Horn  <max@quendi.de>
	* pathfinder/path.cc: fixed memory leak in A_star_queue destructor
	* files/utils.cc: added two missing std:: prefixes

2001-02-08  Tristan Tarrant  <nadir@users.sourceforge.net>
	* audio/pcb.h: Throttle producers by not increasing the window, and
	  reshuffle data to the bottom of the buffer if space is available,
	  instead of allocating more memory.
	* shapes/font.cc, shapes/font.h, shapes/vgafile.cc, gamewin.cc:
	  delete dynamically allocated objects in destructors, to ease
	  hunting of memory leaks.
	* data/quotes.txt: new quote by Jeff

2001-02-07  Max Horn  <max@quendi.de>
	* tools/expack.cc: change all uses of strcpy/strcat to strncpy/strncat
	  and also did some namespace std:: fixing

2001-02-07  Ryan Nunn <triforce@merlin.net.au>